--- a/src/SistemaArchivo/c1_presentacion/frmCargo.form
+++ b/src/SistemaArchivo/c1_presentacion/frmCargo.form
@@ -45,8 +45,9 @@
                   <Component id="btnAgregarCargo" max="32767" attributes="0"/>
                   <Component id="btnRegresar" max="32767" attributes="0"/>
                   <Component id="btnEliminarCargo" max="32767" attributes="0"/>
+                  <Component id="btnModificarCargo" max="32767" attributes="0"/>
               </Group>
-              <EmptySpace pref="78" max="32767" attributes="0"/>
+              <EmptySpace pref="70" max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -77,7 +78,9 @@
                   <Group type="102" alignment="0" attributes="0">
                       <EmptySpace min="-2" pref="66" max="-2" attributes="0"/>
                       <Component id="btnAgregarCargo" min="-2" max="-2" attributes="0"/>
-                      <EmptySpace type="unrelated" max="-2" attributes="0"/>
+                      <EmptySpace min="-2" pref="22" max="-2" attributes="0"/>
+                      <Component id="btnModificarCargo" min="-2" max="-2" attributes="0"/>
+                      <EmptySpace min="-2" pref="27" max="-2" attributes="0"/>
                       <Component id="btnEliminarCargo" min="-2" max="-2" attributes="0"/>
                       <EmptySpace max="32767" attributes="0"/>
                       <Component id="btnRegresar" min="-2" max="-2" attributes="0"/>
@@ -174,6 +177,14 @@
       </Properties>
     </Component>
     <Component class="javax.swing.JTextField" name="txtIdCargo">
+    </Component>
+    <Component class="javax.swing.JButton" name="btnModificarCargo">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="Modificar Cargo"/>
+      </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnModificarCargoActionPerformed"/>
+      </Events>
     </Component>
   </SubComponents>
 </Form>
